2009-01-29  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-render-manager.h (STATE_SHOW_STATUS_AREA): Do not show
	status area in edit mode. Fixes NB#93642, NB#96951

	* debian/changelog: Update.

2009-01-29  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c:
	Removed 1px border, added rounding. The fix will rely on the new
	rounding changes to clutter.

2009-01-29  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c:
	Fix for 98336, 98577, 98393 - now update a 1px border around the
	damaged area.

2009-01-29  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c:
	Now unrefs objects that matchbox refs
	Removed scroll-out part of subview transition for now (to get 
	around Image Viewer unresponsiveness problems)

2009-01-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-app.c (hd_app_init): Patch from Laszlo to set transiency
	of stackable windows. Fixes: NB#97313

2009-01-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-dbus.c:
	  Removed com.nokia.osso_app_killer.kill.
	* src/mb/hd-comp-mgr.c: hd_comp_mgr_hibernate_client()
	  Don't WM_DELETE but SIGTERM the applications.

2009-01-29  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-clutter-cache.h (Added)
	* src/home/hd-clutter-cache.c (Added)
	* src/home/Makefile.am:
	To allow textures (Eg. for buttons/title bars) to be cached
	* src/home/hd-render-manager.c
	* src/home/hd-switcher.c
	* src/home/hd-render-manager.h
	* src/home/hd-switcher.h
	* src/home/hd-title-bar.h (Added)
	* src/home/hd-title-bar.c: (Added)
	Class to encapsulate things to go in top bar for h-d. Currently
	the launcher/switcher buttons. Will handle animation of them +
	theming shaped background for status area 
	* src/tidy/tidy-sub-texture.c (Added)
	* src/tidy/tidy-sub-texture.h (Added)
	* src/tidy/Makefile.am:
	Special clutter class to show only a small part of a bigger texture.
	Used for theming with clutter.